# newspeak

./: .gitignore  CITATION.cff  MANIFEST.md  PLAN.md  README.md  pyproject.toml
configs/evals/: dedup.yaml  registry.yaml
configs/models/: tokenizers.yaml
configs/training/: lora.yaml
data/cards/: gate_prompt_set_card.md  smoke_prompt_set_card.md  (+1 more)
dialect/: examples.md  lexicon.yaml  morphology.yaml  safety_terms.yaml  schema.md  spec.md  structured_simple_spec.md
notebooks/: README.md
paper/: draft.md  ethics.md  limitations.md  methods.md  outline.md  references.bib  related_work.md
schemas/: generation.schema.json  manifest.schema.json  prompt_set.schema.json  results.schema.json  success_label.schema.json  validator_gold.schema.json
scripts/: analyze_results.py  audit_tokenizers.py  check_contamination.py  check_protocol_consistency.py  check_readiness.py  create_manifest_entry.py  evaluate_validator_gold.py  hash_artifacts.py  make_prompt_set_card.py  run_eval.py  run_generation.py  summarize_prompt_set.py  translate_dataset.py  validate_dialect.py  validate_jsonl_schema.py  validate_model_config.py  validate_prompt_set.py  validate_structured_simple.py  validate_success_labels.py
tests/: test_bootstrap.py  test_contamination.py  test_generation.py  test_manifest.py  test_model_config.py  test_prompt_cards.py  test_prompt_set.py  test_readiness.py  test_results_analysis.py  test_schema_validation.py  test_success.py  test_success_labels.py  test_tokenizer_audit.py  test_validate_dialect.py  test_validate_structured_simple.py  test_validator_gold.py
(+33 files in other folders)
